<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu_vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/img_personaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/img_game_logo"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toTopOf="@+id/casesButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerHorizontalMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <com.plicraz.zynner.library.library.CustomButton
        android:id="@+id/casesButton"
        style="@style/MenuButtons"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_game_button"
        android:text="@string/cases"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:fontFamily="@font/capriola"
        app:layout_constraintBottom_toTopOf="@+id/inventoryButton"
        app:layout_constraintEnd_toEndOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="@+id/settings_button" />

    <com.plicraz.zynner.library.library.CustomButton
        android:id="@+id/inventoryButton"
        style="@style/MenuButtons"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_game_button"
        android:text="@string/inventory"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:fontFamily="@font/capriola"
        app:layout_constraintBottom_toTopOf="@id/settings_button"
        app:layout_constraintEnd_toEndOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="@+id/settings_button" />

    <com.plicraz.zynner.library.library.CustomButton
        android:id="@+id/settings_button"
        style="@style/MenuButtons"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_game_button"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/centerHorizontalMenu" />

    <com.plicraz.zynner.library.library.CustomButton
        android:id="@+id/info_button"
        style="@style/MenuButtons"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_game_button"
        android:text="@string/info"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/settings_button"
        app:layout_constraintStart_toStartOf="@+id/settings_button"
        app:layout_constraintTop_toBottomOf="@+id/settings_button" />


</androidx.constraintlayout.widget.ConstraintLayout>